tests/ui_build/option_not_sized.rs
fn foo() {
    const _: cxx::RustOption::<&dyn core::fmt::Debug> = cxx::RustOption::<&dyn core::fmt::Debug>::new();
}

fn main() {}
